I think whisper almost works but idk